tests/ui/coherence/impl-coherence-error-for-undefined-type-18058.stderr
error[E0412]: cannot find type `Undefined` in this scope
  --> $DIR/impl-coherence-error-for-undefined-type-18058.rs:2:6
   |
LL | impl Undefined {}
   |      ^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
