tests/ui/coherence/impl-coherence-error-for-undefined-type-18058.rs
// https://github.com/rust-lang/rust/issues/18058
impl Undefined {}
//~^ ERROR cannot find type `Undefined` in this scope

fn main() {}
